Adicionei meu nome no arquivo jogo.html

--- a/views/pages/jogo.html
+++ b/views/pages/jogo.html
@@ -1,8 +1,9 @@
+bash: line 1: y: command not found
 <!DOCTYPE html>
 <html>
 <body onKeyDown="pegadirecao(event.keyCode);">
 
-<h2 align="center">SEU NOME AQUI</h2>
+<h2 align="center">Vivian Alves</h2>
 
 <div id=principal></div>
 <script>
