Adicionado meu nome

--- a/views/pages/jogo.html
+++ b/views/pages/jogo.html
@@ -2,7 +2,7 @@
 <html>
 <body onKeyDown="pegadirecao(event.keyCode);">
 
-<h2 align="center">Vivian A. Alves</h2>
+<h2 align="center">Vivian</h2>
 
 <div id=principal></div>
 <script>
